Fixed some weird as shit alignment in the login view that cut off text when you turned the phone sideways

--- a/src/App.css
+++ b/src/App.css
@@ -46,5 +46,4 @@ body::-webkit-scrollbar {
 }
 
 body {
-    -ms-overflow-style: none;
 }
